; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/oss/extr_seq_oss.c_odev_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/oss/extr_seq_oss.c_odev_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@SNDRV_MINOR_OSS_MUSIC = common dso_local global i64 0, align 8
@SNDRV_SEQ_OSS_MODE_MUSIC = common dso_local global i32 0, align 4
@SNDRV_SEQ_OSS_MODE_SYNTH = common dso_local global i32 0, align 4
@register_mutex = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @odev_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @odev_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %7 = load %struct.inode*, %struct.inode** %3, align 8
  %8 = call i64 @iminor(%struct.inode* %7)
  %9 = load i64, i64* @SNDRV_MINOR_OSS_MUSIC, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @SNDRV_SEQ_OSS_MODE_MUSIC, align 4
  store i32 %12, i32* %5, align 4
  br label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @SNDRV_SEQ_OSS_MODE_SYNTH, align 4
  store i32 %14, i32* %5, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = call i32 @mutex_lock(i32* @register_mutex)
  %17 = load %struct.file*, %struct.file** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @snd_seq_oss_open(%struct.file* %17, i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = call i32 @mutex_unlock(i32* @register_mutex)
  %21 = load i32, i32* %6, align 4
  ret i32 %21
}

declare dso_local i64 @iminor(%struct.inode*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @snd_seq_oss_open(%struct.file*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
